; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_waldump/extr_compat.c_timestamptz_to_time_t.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_waldump/extr_compat.c_timestamptz_to_time_t.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USECS_PER_SEC = common dso_local global i32 0, align 4
@POSTGRES_EPOCH_JDATE = common dso_local global i32 0, align 4
@UNIX_EPOCH_JDATE = common dso_local global i32 0, align 4
@SECS_PER_DAY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @timestamptz_to_time_t(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @USECS_PER_SEC, align 4
  %6 = sdiv i32 %4, %5
  %7 = load i32, i32* @POSTGRES_EPOCH_JDATE, align 4
  %8 = load i32, i32* @UNIX_EPOCH_JDATE, align 4
  %9 = sub nsw i32 %7, %8
  %10 = load i32, i32* @SECS_PER_DAY, align 4
  %11 = mul nsw i32 %9, %10
  %12 = add nsw i32 %6, %11
  %13 = sext i32 %12 to i64
  store i64 %13, i64* %3, align 8
  %14 = load i64, i64* %3, align 8
  ret i64 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
